--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
+    "fs": "^0.0.1-security",
     "hash.js": "^1.1.7",
     "js-sha256": "^0.9.0",
     "kiteconnect": "^4.0.1",
@@ -35,6 +36,7 @@
     "mysql2": "^2.3.3",
     "node-cron": "^3.0.2",
     "node-libcurl": "^2.3.4",
+    "nodemailer": "^6.9.6",
     "sequelize": "^6.25.3",
     "socket.io": "^4.5.2",
     "winston": "^3.8.2"
